Fix #118055: libOverride `resync()` RNA call crashes when view_layer is not specified.

Underlying `lib_override_library_resync` code lost the optional aspect
of its `view_layer` parameter at some point, trivial to restore it
luckily.